7.x-1.1, 2019-07-11
-------------------
- Added feature steps to mock the asu_isearch directory import source
- Added scenario to asu_directory_import.feature which tests that both profile nodes and affiliation field_collections
  are created, updated, and loaded correctly
- Updated behat.travis.yml config so that Chromedriver starts with a fullscreen window

7.x-1.0, 2017-12-19
-------------------
- Moved ASU custom behat tests and steps into this module.
- Added Behat tests for the ASU DIRS suite and ASU Spotlight module