@@ -8,7 +8,7 @@ dependencies[] = asu_dirs
 dependencies[] = asu_isearch
 dependencies[] = asu_dir_panel
 dependencies[] = webspark_wysiwyg
-version = "7.x-1.1"
+version = "7.x-1.2"
 core = "7.x"
 project = "ASU Webspark"
 datestamp = "1498107373"
