@@ -1,3 +1,7 @@
+7.x-1.2, 2019-08-12
+-------------------
+- Added tests for the ASU Maps Enhanced module
+
 7.x-1.1, 2019-07-11
 -------------------
 - Added feature steps to mock the asu_isearch directory import source
